--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -1,10 +1,27 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
  <head>
   <meta charset="utf-8" />
   <title>Вход</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static '/css/main.css' %}" />
  </head>
  <body>
-  
+  <section class="login-form-section">
+    <form method="post">
+        {% csrf_token %}
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Логин</label>
+          {{ form.username }}
+          <div id="emailHelp" class="form-text">Чтобы зарегестрировать аккаунт обратитесь к администратору.</div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Пароль</label>
+          {{ form.password }}
+        </div>
+        <button type="submit" class="btn btn-primary">Отправить</button>
+      </form>
+  </section>
  </body>
 </html>
